Changes for 1.0.0

 - [ZBX-675] fixed wrong result of function "nodata" after server restart (Sasha)
 - [NTD-62] fixed runtime error is occurred by Configuration-Actions (Artem)
 - [ZBX-656] fixed possible warning in server log zbx_malloc: allocating already allocated memory in json.c (Sasha)
 - [ZBX-506] fixed duplicate UnavailableDelay in zabbix_server.conf (Sasha)
 - [NTD-50] added support of net.tcp.listen under FreeBSD (Sasha)
 - [NTD-50] added support of net.if.in/out/total/collisions under FreeBSD (Sasha)
 - [NTD-52] fixed configuration script for net.tcp.dns* check processing (Sasha)
 - [NTD-61] fixed possible memory leak in autodiscovery actions (Sasha)
 - [NTD-55] added support od system.boottime under Solaris (Sasha)
 - [NTD-56] added support od system.cpu.load under Solaris 2.6 (Sasha)
 - [NTD-59] DM: fixed memory leak in synchronization of node configuration (Sasha)
 - [NTD-60] fixed rare race condition in DBimplode_exp (Sasha)
 - [NTD-57] fixed wrong message on delete of maintenance period (Sasha)
 - [NTD-58] fixed cleanup of open file descriptor (Sasha)
 - [NTD-35] fixed compilation problems under Solaris 6/8 (Sasha)
 - [NTD-49,NTD-53,NTD-30,NTD-51] fixed problem with "Too many open files" by agent under Solaris and AIX (Sasha)
 - [NTD-44] fixed compilation problems under FreeBSD 4.2 (Sasha)
 - [NTD-48] added support of system.swap.size under FreeBSD (Sasha)
 - [ZBX-623] fixed incorrect processing of function abschange() for integers (Sasha)
 - [NTD-43] fixed wrong help links by pointing to correct page with manual (Artem)
 - [NTD-42] fixed pages error (Artem)
 - [NTD-39] fixed filter reset button (Artem)
 - [NTD-41] fixed popup menu (Artem)
 - [NTD-29] fixed popup menu (Artem)
 - [NTD-37] fixed fonts in the maps (Artem)
 - [ZBX-619] fixed agent crash for system.uptime under Solaris 2.5.1 (Sasha)
 - [ZBX-610] fixed memory leak in external checks (Sasha)
 - [NTD-34] fixed problem with net.tcp.dns under AIX (Sasha)